# BigRedAdventure

./: .gitignore  INSTALL.md  Makefile  README.md  dune-project  install.sh  is_rsa_personal  is_rsa_personal.pub
assets/: creature_list.json
assets/creature_sprites/: clefairy_back.json  clefairy_front.json  format.json  rayquaza.json  rayquaza_front.json
lib/: author.ml  author.mli  battle.ml  battle.mli  combat.ml  combat.mli  controller.ml  controller.mli  creature.ml  creature.mli  draw.ml  draw.mli  dune  input.ml  input.mli  inventory.ml  inventory.mli  item.ml  item.mli  map.ml  map.mli  menu.ml  menu.mli  move.ml  move.mli  overworld.ml  overworld.mli  player.ml  player.mli  pokemon.ml  pokemon.mli  ui.ml  ui.mli  util.mli
lib/Controllers/: battle.ml  battle.mli  controller.ml  controller.mli  creature_menu.ml  creature_menu.mli  event_menu.ml  event_menu.mli  inventory_menu.ml  inventory_menu.mli  loading_screen.ml  loading_screen.mli  main_menu.ml  main_menu.mli  menu.ml  menu.mli  overworld.ml  overworld.mli  party_menu.ml  party_menu.mli  saves.ml  saves.mli  saves_menu.ml  saves_menu.mli  state.ml  state.mli
lib/Gameplay/: camera.mli  combat.ml  combat.mli  creature.ml  creature.mli  entity.ml  entity.mli  inventory.ml  inventory.mli  item.ml  item.mli  map.ml  map.mli  player.ml  player.mli
lib/Other/: animation.ml  animation.mli  author.ml  draw.ml  draw.mli  drawText.ml  drawText.mli  draw_text.ml  draw_text.mli  input.ml  input.mli  loopq.ml  loopq.mli  play_assets.ml  play_assets.mli  sprite_assets.ml  sprite_assets.mli  spritesheet.ml  spritesheet.mli  ui.ml  ui.mli  util.ml  util.mli
test/: dune  inventorytest.ml  itemtest.ml  main.ml  playertest.ml  testutil.ml
(+40 files in other folders)
