(include_subdirs unqualified)

(library
 (name CreatureGame)
 (public_name CreatureGame)
 (libraries yojson ANSITerminal imagelib.unix stdlib sdl2 threads)
 (modules
  ; =====Controllers=====
  battle
  controller
  main_menu
  inventory_menu
  creature_menu
  event_menu
  party_menu
  overworld
  state
  ; =====GAMEPLAY=====
  combat
  creature
  item
  inventory
  map
  player
  entity
  ; =====Other=====
  animation
  animator
  sprite_assets
  spritesheet
  draw
  author
  ui
  util
  input
  loopq
  drawText))
