(include_subdirs unqualified)

(library
 (name CreatureGame)
 (public_name CreatureGame)
 (libraries yojson ANSITerminal imagelib.unix stdlib sdl2 threads)
 (modules
  ; =====Controllers=====
  battle
  controller
  main_menu
  inventory_menu
  creature_menu
  event_menu
  party_menu
  saves_menu
  loading_screen
  overworld
  state
  saves
  ; =====GAMEPLAY=====
  combat
  creature
  item
  inventory
  map
  player
  entity
  ; =====Other=====
  animation
  spritesheet
  draw
  draw_text
  author
  ui
  util
  input))
